--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.8.1",
     "body-parser": "^1.20.3",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
     "flatpickr": "^4.6.13"
   }
