--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
-    "flatpickr": "^4.6.13"
+    "flatpickr": "^4.6.13",
+    "multer": "^2.0.2",
+    "xlsx": "^0.18.5"
   }
 }
