edit: app.js non prod

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules/
 data/
 .env
-data/database.sqlite-shm
+data/database.sqlite
 data/database.sqlite-wal
+data/database.sqlite-shm
 folder-structure/project.md
