--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "body-parser": "^1.20.3",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
     "flatpickr": "^4.6.13",
     "multer": "^2.0.2",
-    "xlsx": "^0.18.5"
+    "session-file-store": "^1.5.0"
   }
 }
