--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install:client": "cd client && npm install",
     "postinstall": "npm run install:server && npm run install:client",
     "build:client": "cd client && npm run build",
-    "start": "cd server && npm start",
+    "start": "npm run build:client && cd server && npm start",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run dev",
     "dev": "concurrently \"npm:dev:server\" \"npm:dev:client\""
